기본이 되는 구조 업로드

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,7 +16,7 @@
     <color name="colorWhiteGray">#AAAAAA</color>
     <color name="colorOrangeRed">#FF4500</color>
     <color name="colorOrange">#FFA500</color>
-    <color name="colorTomato">#FF6347</color>
+    <color name="colorTomato">#FFFF6347</color>
     <color name="colorBlackCherry">#060102</color>
 
     <color name="colorPear1">#E0EEDD</color>
