--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,37 +10,36 @@
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity">
-        <EditText
+        android:layout_height="match_parent">
+        <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/edtKeyword"
             android:layout_width="0dp"
-            android:layout_height="60dp"
+            android:layout_height="50dp"
             android:layout_marginTop="20dp"
             android:layout_marginStart="20dp"
             android:text="@={vmMain.keyword}"
             android:textSize="12dp"
             android:hint="@string/search_keyword_hint"
-            android:inputType="phone"
+            android:inputType="text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btnSearch"
             app:layout_constraintTop_toTopOf="parent"/>
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnSearch"
             android:layout_width="120dp"
-            android:layout_height="60dp"
+            android:layout_height="50dp"
             android:layout_marginTop="20dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="20dp"
             android:text="@string/search"
             android:textSize="16dp"
-            android:background="@color/colorTomato"
+            android:background="@color/colorDarkGray"
             android:textColor="@color/colorWhite"
             android:onClick="@{vmMain::onClickSearch}"
             app:layout_constraintStart_toEndOf="@+id/edtKeyword"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
-        <TextView
+        <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/txvCount"
             android:layout_width="0dp"
             android:layout_height="60dp"
