검색 결과를 화면에 보여주는 기능 개발

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,10 @@
         <variable
             name="vmMain"
             type="com.kiljae.mygitsample.viewmodel.MainViewModel" />
+        <import
+            type="com.kiljae.mygitsample.common.Util"
+            alias="util"/>
+
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -45,7 +49,7 @@
             android:layout_height="60dp"
             android:layout_margin="10dp"
             android:textSize="16dp"
-            android:text="@{String.valueOf(vmMain.count)}"
+            android:text="@{util.prettyText(vmMain.header.totalUserCount)}"
             android:gravity="center"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
